Bug 329118 - If a filtered item is renamed, and the filter is cleared, the old file name is shown in the view
Summary: If a filtered item is renamed, and the filter is cleared, the old file name i...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 4.12.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-22 11:49 UTC by Frank Reininghaus
Modified: 2013-12-22 11:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Reininghaus 2013-12-22 11:49:38 UTC
See summary.

Reproducible: Always

Steps to Reproduce:
1. In an empty directory, create two test files with "touch a.txt b.jpg"
2. Open the directory in Dolphin, and split the view.
3. In one of the views, press Ctrl+I and enter the filter text "txt" -> b.jpg disappears.
4. In the other view, rename "b.jpg" to "c.jpg".
5. Clear the filter.
Actual Results:  
The view still shows a.txt and b.jpg.

Expected Results:  
The view should show a.txt and c.jpg.

Patch at https://git.reviewboard.kde.org/r/114459/
Comment 1 Frank Reininghaus 2013-12-22 11:54:46 UTC
Git commit c0a851893ecfc48a9ec7d475d0f7b8213514f9c3 by Frank Reininghaus.
Committed on 22/12/2013 at 11:50.
Pushed by freininghaus into branch 'KDE/4.12'.

Update filtered items when the "refreshItems" signal is received

This fixes the problem that the new file name is not shown in the view
if an item is renamed while it is filtered.
FIXED-IN: 4.12.1
REVIEW: 114459

M  +14   -0    dolphin/src/kitemviews/kfileitemmodel.cpp
M  +30   -0    dolphin/src/tests/kfileitemmodeltest.cpp

http://commits.kde.org/kde-baseapps/c0a851893ecfc48a9ec7d475d0f7b8213514f9c3